[package]
name = "reddit2xml"
version = "0.1.0"
edition = "2021"
description = "Token-efficient Reddit CLI tool outputting compact XML"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
